--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,7 @@ AllCops:
     - config/environments/test.rb
     - config/initializers/assets.rb
     - config/initializers/content_security_policy.rb
+    - config/initializers/devise.rb
     - config/initializers/filter_parameter_logging.rb
     - config/initializers/inflections.rb
     - config/initializers/permissions_policy.rb
