fix: annotate を実行するには RAILS_ENV を development に

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
         if: steps.run-rspec.outcome == 'success' || (failure() && steps.run-rspec.outcome == 'failure')
 
       - name: Run Annotate
+        env:
+          RAILS_ENV: development
         run: |
           bin/rails annotate_models
           git diff --exit-code
