chore: view_component と他ライブラリとの設定

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,6 +52,10 @@ Style/TrailingCommaInHashLiteral:
 Layout/LineLength:
   Max: 160
 
+Lint/MissingSuper:
+  Exclude:
+    - app/components/*
+
 Metrics/AbcSize:
   Exclude:
     - db/migrate/*
