--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "autoprefixer": "^10.4.14",
     "esbuild": "^0.18.0",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-stimulus-components": "^3.0.4"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
