--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "autoprefixer": "^10.4.14",
     "esbuild": "^0.18.0",
     "postcss": "^8.4.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-stimulus-components": "^3.0.4"
   },
@@ -19,7 +21,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets --loader:.js=jsx",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
