--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: bin/rails assets:precompile
 
       - name: Set up database schema
-        run: bin/rails db:schema:load
+        run: bin/rails db:create db:schema:load
 
       - name: Run RSpec
         run: bin/rails parallel:spec
