--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         image: postgres:15-alpine
         ports:
           - 5432:5432
+        env:
+          POSTGRES_PASSWORD: password
     env:
       RAILS_ENV: test
     steps:
