--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: bin/rails assets:precompile
 
       - name: Set up database schema
-        run: bin/rails db:create db:schema:load
+        run: bin/rails parallel:setup
 
       - name: Run RSpec
         run: bin/rails parallel:spec
