config/database.yml の設定変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build assets
         run: bin/rails assets:precompile
 
-      - name: Set up database schema
+      - name: Create db and loads schema
         run: bin/rails parallel:setup
 
       - name: Run RSpec
