--- a/config/database.yml
+++ b/config/database.yml
@@ -59,8 +59,8 @@ test:
   <<: *default
   database: view_component_sandbox_test<%= ENV["TEST_ENV_NUMBER"] %>
   username: postgres
-  password: password
-  # host: localhost
+  # password: password
+  host: localhost
   # port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
