--- a/config/database.yml
+++ b/config/database.yml
@@ -59,7 +59,7 @@ test:
   <<: *default
   database: view_component_sandbox_test<%= ENV["TEST_ENV_NUMBER"] %>
   username: postgres
-  # password: password
+  password: password
   host: localhost
   # port: 5432
 
