--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,7 @@ development:
 test:
   <<: *default
   database: view_component_sandbox_test<%= ENV["TEST_ENV_NUMBER"] %>
-  username: postgres
+  # username: postgres
   password: password
   host: localhost
   # port: 5432
