--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
     env:
       RAILS_ENV: test
     steps:
-      - name: Install fonts-noto
+      - name: Install fonts-noto-cjk
         run: |
           sudo apt-get update
-          sudo apt-get install fonts-noto
+          sudo apt-get install fonts-noto-cjk
 
       - name: Checkout code
         uses: actions/checkout@v3
