fix: 個々のファイルで React をインポートせずに JSX を使用するためのオプション

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prettier-plugin-tailwindcss": "^0.5.1"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets --loader:.js=jsx",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets --loader:.js=jsx --jsx=automatic",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
