--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-stimulus-components": "^4.0.4"
+    "tailwindcss-stimulus-components": "^4.0.4",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
