chore: erb ファイルも対象にして tailwind_sorter を実行する設定

--- a/config/tailwind_sorter.yml
+++ b/config/tailwind_sorter.yml
@@ -16,6 +16,16 @@ regexps:
     file_extension: .slim
     class_prefix: ""
     class_splitter: " "
+  erb_html:
+    regexp: '(?<before>class=")(?<classes>(?: *[a-z0-9_:\/-]+){2,})'
+    file_extension: .erb
+    class_prefix: ""
+    class_splitter: " "
+  erb_ruby_class_attribute:
+    regexp: '(?<before>class: ")(?<classes>(?: *[a-z0-9_:\/-]+){2,})'
+    file_extension: .erb
+    class_prefix: ""
+    class_splitter: " "
 variants_order:
   - custom # this is a special variant so that only custom variants have index 0
   - sm
