--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.14",
+    "choices.js": "^10.2.0",
     "esbuild": "^0.19.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
