chore: rails edge でのテストが落ちてもジョブは成功とする

--- a/.github/workflows/rails_edge.yml
+++ b/.github/workflows/rails_edge.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Run RSpec
         run: bin/rails parallel:spec
         id: run-rspec
+        continue-on-error: true
 
       - name: Archive screenshots
         uses: actions/upload-artifact@v3
