--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@heroicons/react": "^2.0.18",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/request.js": "^0.0.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.14",
@@ -14,6 +15,7 @@
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sortablejs": "^1.15.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-stimulus-components": "^4.0.4",
     "tippy.js": "^6.3.7"
