--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,6 @@ services:
   redis:
     image: redis:7.2.3
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
     volumes:
       - ./storage/redis:/data
